Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-139650

[VxWorks] touch evdev discovery is missing from 6.8

XMLWordPrintable

    • VxWorks
    • 4cffd004c (tqtc/lts-6.8)

      The touch devices are not discovered using Qt 6.8 on VxWorks.

      The reason is visible on the attached picture.

      It has been implemented in 6.9 and later.

        For Gerrit Dashboard: QTBUG-139650
        # Subject Branch Project Status CR V

            karimpinter Karim Pinter
            karimpinter Karim Pinter
            Veli-Pekka Heinonen Veli-Pekka Heinonen
            Jarno Lämsä Jarno Lämsä
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:

                There are no open Gerrit changes