Add touch to device discovery for VxWorks

The touch discovery for VxWorks was missing from 6.8 branch, this fix is
adding it.

Task-number: QTBUG-139650
Change-Id: I31479d85198e594e2badf2229d615631b4773261
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>